# secure-agent

./: .env  .gitignore  Makefile  README.md  pyproject.toml
frontend/secure-agent-ui/: package-lock.json  package.json
frontend/secure-agent-ui/src/: App.tsx  ErrorBoundary.tsx  index.css  keycloak.ts  main.tsx
frontend/secure-agent-ui/src/api/: agentService.ts  axiosInstance.ts
frontend/secure-agent-ui/src/auth/: useAxiosAuth.ts
frontend/secure-agent-ui/src/pages/: Dashboard.tsx  Home.tsx
infra/: docker-compose.yml
src/secureagent/: app_factory.py  auth.py  config.py  human_resource.py  logging_config.py  main.py  session.py
